letta-server/src/tools/snapshots/letta_server__tools__snapshots_test__tests__agent_list.snap
---
source: letta-server/src/tools/snapshots_test.rs
expression: response
---
{
  "success": true,
  "operation": "list",
  "message": "Agents retrieved",
  "data": {
    "agents": [
      {
        "id": "agent-123",
        "name": "Assistant",
        "created_at": "2024-01-01T00:00:00Z"
      }
    ]
  },
  "count": 1
}
