letta-server/src/tools/snapshots/letta_server__tools__snapshots_test__tests__error_response.snap
---
source: letta-server/src/tools/snapshots_test.rs
expression: response
---
{
  "success": false,
  "operation": "get",
  "message": "Tool not found"
}
