letta-server/src/tools/snapshots/letta_server__tools__snapshots_test__tests__memory_get_core.snap
---
source: letta-server/src/tools/snapshots_test.rs
expression: response
---
{
  "success": true,
  "operation": "get_core_memory",
  "message": "Memory retrieved",
  "data": {
    "human": "User is a developer",
    "persona": "I am a helpful assistant"
  }
}
