letta-server/src/tools/snapshots/letta_server__tools__snapshots_test__tests__memory_search_archival.snap
---
source: letta-server/src/tools/snapshots_test.rs
expression: response
---
{
  "success": true,
  "operation": "search_archival",
  "message": "Search completed",
  "data": {
    "results": [
      {
        "id": "passage-123",
        "text": "Important context",
        "created_at": "2024-01-01T00:00:00Z"
      }
    ]
  },
  "count": 1
}
