letta-server/src/tools/snapshots/letta_server__tools__snapshots_test__tests__tool_manager_attach.snap
---
source: letta-server/src/tools/snapshots_test.rs
expression: response
---
{
  "success": true,
  "operation": "attach",
  "message": "Tool attached successfully",
  "data": {
    "tool_id": "tool-123",
    "agent_id": "agent-456"
  }
}
