letta-server/src/tools/snapshots/letta_server__tools__snapshots_test__tests__tool_manager_get.snap
---
source: letta-server/src/tools/snapshots_test.rs
expression: response
---
{
  "success": true,
  "operation": "get",
  "message": "Tool retrieved successfully",
  "data": {
    "id": "tool-123",
    "name": "send_message",
    "description": "Send a message to the user",
    "source_type": "python",
    "source_code": "def send_message(message: str):\n    return message",
    "tags": [
      "core"
    ],
    "created_at": "2024-01-01T00:00:00Z"
  }
}
