letta-server/src/tools/snapshots/letta_server__tools__snapshots_test__tests__tool_manager_list.snap
---
source: letta-server/src/tools/snapshots_test.rs
expression: response
---
{
  "success": true,
  "operation": "list",
  "message": "Tools retrieved successfully",
  "data": {
    "tools": [
      {
        "id": "tool-123",
        "name": "send_message",
        "description": "Send a message to the user",
        "source_type": "python",
        "tags": [
          "core"
        ],
        "created_at": "2024-01-01T00:00:00Z",
        "args_count": 2,
        "source_lines": 15
      }
    ]
  },
  "count": 1
}
