letta-server/src/tools/snapshots/letta_server__tools__snapshots_test__tests__validation_error.snap
---
source: letta-server/src/tools/snapshots_test.rs
expression: response
---
{
  "success": false,
  "operation": "attach",
  "message": "Missing required field: agent_id"
}
